make spotify client and router do types better generally (#14)
